--- a/views/users/landingPage.ejs
+++ b/views/users/landingPage.ejs
@@ -229,7 +229,7 @@
                             </a>
 
                             <div class="banner-content banner-content-overlay text-center">
-                                <h3 class="banner-title font-weight-normal">Nike</h3><!-- End .banner-title -->
+                                <h3 class="banner-title font-weight-normal">NIKE</h3><!-- End .banner-title -->
                                 <a href="#" class="banner-link"  onclick="passCategoryId('6491169a8ac58b3536ba0412')">SHOP NOW</a>
                             </div><!-- End .banner-content -->
                         </div><!-- End .banner -->
@@ -242,7 +242,7 @@
                             </a>
 
                             <div class="banner-content banner-content-overlay text-center">
-                                <h3 class="banner-title font-weight-normal">Puma</h3><!-- End .banner-title -->
+                                <h3 class="banner-title font-weight-normal">PUMA</h3><!-- End .banner-title -->
                                 <a href="#" class="banner-link" onclick="passCategoryId('649116bf8ac58b3536ba0418')">SHOP NOW</a>
                             </div><!-- End .banner-content -->
                         </div><!-- End .banner -->
@@ -256,7 +256,7 @@
 
                             <div class="banner-content banner-content-overlay text-center">
                            
-                                <h3 class="banner-title font-weight-normal" >Adidas</h3><!-- End .banner-title -->
+                                <h3 class="banner-title font-weight-normal" >ADIDAS</h3><!-- End .banner-title -->
                                 <a href="#" class="banner-link" onclick="passCategoryId('649116e28ac58b3536ba041e')">SHOP NOW</a>
                             </div><!-- End .banner-content -->
                         </div><!-- End .banner -->
