--- a/views/layouts/userFooter.ejs
+++ b/views/layouts/userFooter.ejs
@@ -10,7 +10,7 @@
                 <div class="single-footer-widget">
                     <h6>About Us</h6>
                     <p>
-                        At SoleScape, we are passionate about crafting innovative footwear that combines style, comfort, and performance, empowering individuals to confidently conquer their journeys.
+                        At Laceit, we are passionate about crafting innovative footwear that combines style, comfort, and performance, empowering individuals to confidently conquer their journeys.
                     </p>
                 </div>
             </div>
@@ -51,8 +51,7 @@
                     <div class="footer-social d-flex align-items-center">
                         <a href="#"><i class="fa fa-facebook"></i></a>
                         <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-dribbble"></i></a>
-                        <a href="#"><i class="fa fa-behance"></i></a>
+                    
                     </div>
                 </div>
             </div>
