--- a/views/users/changePassword.ejs
+++ b/views/users/changePassword.ejs
@@ -83,6 +83,7 @@
       <div class="form-group">
         <button type="submit"  class="btn">Change Password</button>
       </div>
+      <p ><%=(typeof message!=='undefined')?message:'' %></p>
     </form>
   </div>
 </body>
