--- a/views/layouts/profileHeader.ejs
+++ b/views/layouts/profileHeader.ejs
@@ -110,11 +110,9 @@
 							<a href="/home">Home</a>
 						</li><!-- / Home -->
 						<!-- Shop -->
-						<li class="dropdown dropdown-slide">
-							<a href="/shop" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
-							data-delay="350" role="button" aria-haspopup="true" aria-expanded="false">Shop <span>
-							</span></a>
-						</li><!-- / Shop -->
+						<li class="dropdown">
+							<a href="/shop">Shop</a>
+						</li><!-- / Home -->
 						
 						<!-- Home -->
 						<% if (typeof user!=='undefined' && user!==null) { %>
