--- a/views/users/verifyOtp.ejs
+++ b/views/users/verifyOtp.ejs
@@ -1,26 +1,52 @@
-<%- include('../layouts/userHeader.ejs') %>
+
+
+<!DOCTYPE html>
+<html lang="zxx" class="no-js">
+
+<head>
+	<!-- Mobile Specific Meta -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Favicon-->
+	<link rel="shortcut icon" href="../fe/img/fav.png">
+	<!-- Author Meta -->
+	<meta name="author" content="CodePixar">
+	<!-- Meta Description -->
+	<meta name="description" content="">
+	<!-- Meta Keyword -->
+	<meta name="keywords" content="">
+	<!-- meta character set -->
+	<meta charset="UTF-8">
+	<!-- Site Title -->
+	<title>Karma Shop</title>
+
+	<!--
+		CSS
+		============================================= -->
+	<link rel="stylesheet" href="../fe/css/linearicons.css">
+	<link rel="stylesheet" href="../fe/css/owl.carousel.css">
+	<link rel="stylesheet" href="../fe/css/themify-icons.css">
+	<link rel="stylesheet" href="../fe/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../fe/css/nice-select.css">
+	<link rel="stylesheet" href="../fe/css/nouislider.min.css">
+	<link rel="stylesheet" href="../fe/css/bootstrap.css">
+	<link rel="stylesheet" href="../fe/css/main.css">
+</head>
+
+<body>
+
+	<!-- Start Header Area -->
+	
+	<!-- End Header Area --><%- include('../layouts/newUh.ejs') %>
 
 
 
 
-	<!-- Start Banner Area -->
-	<section class="banner-area organic-breadcrumb">
-		<div class="container">
-			<div class="breadcrumb-banner d-flex flex-wrap align-items-center justify-content-end">
-				<div class="col-first">
-					
-					<h1>Login</h1>
-					
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Banner Area -->
 
 
 
 
-    <section class="register_area p_100">
+
+    <section class="register_area p_100" style="margin-top: 200px;">
         <div class="container mt-5 mb-5">
             <div class="row">
                 <div class="col-lg-6 mx-auto">
