--- a/views/users/wallettransaction.ejs
+++ b/views/users/wallettransaction.ejs
@@ -67,28 +67,31 @@
     Essential Scripts
     =====================================-->
     
-    <!-- Main jQuery -->
     <script src="../theme/plugins/jquery/dist/jquery.min.js"></script>
-    <!-- Bootstrap 3.1 -->
-    <script src="../theme/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <!-- Bootstrap Touchpin -->
-    <script src="../theme/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js"></script>
-    <!-- Instagram Feed Js -->
-    <script src="../theme/plugins/instafeed/instafeed.min.js"></script>
-    <!-- Video Lightbox Plugin -->
-    <script src="../theme/plugins/ekko-lightbox/dist/ekko-lightbox.min.js"></script>
-    <!-- Count Down Js -->
-    <script src="../theme/plugins/syo-timer/build/jquery.syotimer.min.js"></script>
+  <!-- Bootstrap 3.1 -->
+  <script src="../theme/plugins/bootstrap/js/bootstrap.min.js"></script>
+  <!-- Bootstrap Touchpin -->
+  <script src="../theme/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js"></script>
+  <!-- Instagram Feed Js -->
+  <script src="../theme/plugins/instafeed/instafeed.min.js"></script>
+  <!-- Video Lightbox Plugin -->
+  <script src="../theme/plugins/ekko-lightbox/dist/ekko-lightbox.min.js"></script>
+  <!-- Count Down Js -->
+  <script src="../theme/plugins/syo-timer/build/jquery.syotimer.min.js"></script>
 
-    <!-- slick Carousel -->
-    <script src="../theme/plugins/slick/slick.min.js"></script>
-    <script src="../theme/plugins/slick/slick-animation.min.js"></script>
+  <!-- slick Carousel -->
+  <script src="../theme/plugins/slick/slick.min.js"></script>
+  <script src="../theme/plugins/slick/slick-animation.min.js"></script>
 
-    <!-- Google Mapl -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC72vZw-6tGqFyRhhg5CkF2fqfILn2Tsw"></script>
-    <script type="text/javascript" src="../theme/plugins/google-map/gmap.js"></script>
+  <!-- Google Mapl -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC72vZw-6tGqFyRhhg5CkF2fqfILn2Tsw"></script>
+  <script type="text/javascript" src="../theme/plugins/google-map/gmap.js"></script>
 
-    
+  <!-- Main Js File -->
+  <script src="../theme/js/script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+
     
     
 
