headers complete UH

--- a/views/users/userLogin.ejs
+++ b/views/users/userLogin.ejs
@@ -36,7 +36,7 @@
 
 	<!-- Start Header Area -->
 	
-	<!-- End Header Area --><%- include('../layouts/newUh.ejs') %>
+	<!-- End Header Area --><%- include('../layouts/newUH.ejs') %>
 
 	<!-- Start Banner Area -->
 
